fix error at swagger.json
